--- a/index.html
+++ b/index.html
@@ -1,91 +1,164 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NovaLink - Chat futuriste</title>
-  <style>
-    /* SplashScreen styles */
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>NovaLink Chat</title>
 
-    .splash-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: white;
-      flex-direction: column;
-      transition: all 0.5s ease;
-    }
+<style>
+/* Splash screen */
+body, html { margin:0; padding:0; height:100%; font-family: Arial, sans-serif; background:#000; color:#fff; }
+.splash-container { display:flex; justify-content:center; align-items:center; height:100vh; flex-direction:column; transition: all 0.5s ease; }
+.neon-n { font-size:200px; color:red; text-shadow: 0 0 5px #f00,0 0 10px #f00,0 0 20px #f00,0 0 40px #ff0000; background:black; width:200px; height:200px; display:flex; justify-content:center; align-items:center; border-radius:20px; }
 
-    .logo {
-      width: 200px;
-      height: 200px;
-      object-fit: contain;
-    }
+/* Login screen */
+#loginScreen { display:none; flex-direction:column; align-items:center; justify-content:center; height:100vh; background:#111; }
+input { padding:10px; margin:5px; border-radius:5px; border:none; font-size:16px; }
+button { padding:10px 20px; margin:5px; font-size:16px; border:none; border-radius:5px; cursor:pointer; background:red; color:white; }
 
-    .step2 {
-      background-color: black;
-      color: white;
-    }
-
-    .black-circle {
-      width: 150px;
-      height: 150px;
-      background-color: black;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-
-    .logo-web {
-      width: 70px;
-      height: 70px;
-      margin-bottom: 10px;
-    }
-
-    .hyper-text {
-      font-size: 20px;
-      font-weight: bold;
-      color: white;
-    }
-  </style>
+/* Chat screen */
+#chatScreen { display:none; height:100vh; display:flex; flex-direction:column; }
+#groupSelect { padding:10px; }
+#messages { flex:1; overflow-y:auto; padding:10px; background:#222; }
+#messages div { margin-bottom:5px; }
+#sendMessage { display:flex; }
+#sendMessage input { flex:1; }
+#sendMessage button { flex:0; }
+</style>
 </head>
+
 <body>
-  <div id="root">
-    <div id="splash" class="splash-container">
-      <img id="logo-main" src="assets/logo.png" alt="NovaLink" class="logo" />
-    </div>
+
+<!-- Splash Screen -->
+<div id="splash" class="splash-container">
+  <div class="neon-n">N</div>
+</div>
+
+<!-- Login Screen -->
+<div id="loginScreen">
+  <h2>Connexion NovaLink</h2>
+  <input type="text" id="username" placeholder="Nom d'utilisateur">
+  <input type="password" id="password" placeholder="Mot de passe">
+  <input type="text" id="nlink" placeholder="Code NLINK">
+  <button id="loginBtn">Se connecter</button>
+  <div id="loginError" style="color:red;"></div>
+</div>
+
+<!-- Chat Screen -->
+<div id="chatScreen">
+  <div id="groupSelect">
+    <input type="text" id="newGroupName" placeholder="Créer un groupe">
+    <button id="createGroupBtn">Créer</button>
+    <input type="text" id="joinGroupCode" placeholder="Rejoindre un groupe (NLINK)">
+    <button id="joinGroupBtn">Rejoindre</button>
+    <div id="currentGroupName"></div>
   </div>
+  <div id="messages"></div>
+  <div id="sendMessage">
+    <input type="text" id="messageInput" placeholder="Votre message">
+    <button id="sendBtn">Envoyer</button>
+  </div>
+</div>
 
-  <script>
-    const splash = document.getElementById('splash');
-    const logoMain = document.getElementById('logo-main');
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-    // Affiche logo principal pendant 3s
-    setTimeout(() => {
-      splash.innerHTML = `
-        <div class="black-circle">
-          <img src="assets/logoWeb.png" alt="Web Logo" class="logo-web">
-          <div class="hyper-text">Hyper</div>
-        </div>
-      `;
-      splash.classList.add('step2');
-    }, 3000);
+<script>
+// Firebase config
+const firebaseConfig = {
+  apiKey: "TON_API_KEY",
+  authDomain: "ton-projet.firebaseapp.com",
+  projectId: "ton-projet",
+  storageBucket: "ton-projet.appspot.com",
+  messagingSenderId: "TON_ID",
+  appId: "TON_APP_ID"
+};
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
 
-    // Après 1 seconde, charger le reste de l'application
-    setTimeout(() => {
-      splash.style.display = 'none';
-      // Ici, tu pourras charger ton application React
-      // par exemple ReactDOM.render(<App />, document.getElementById('root'));
-    }, 4000);
-  </script>
+// Splash Screen
+setTimeout(() => {
+  document.getElementById('splash').style.display = 'none';
+  document.getElementById('loginScreen').style.display = 'flex';
+}, 3000);
+
+// Login
+const loginBtn = document.getElementById('loginBtn');
+loginBtn.onclick = () => {
+  const username = document.getElementById('username').value.trim();
+  const password = document.getElementById('password').value.trim();
+  const nlink = document.getElementById('nlink').value.trim();
+  if(!username || !password || !nlink){
+    document.getElementById('loginError').innerText = "Remplir tous les champs";
+    return;
+  }
+  // Ici tu peux valider mot de passe simple (côté client)
+  if(password.length < 3){ document.getElementById('loginError').innerText = "Mot de passe trop court"; return; }
+  // Login OK
+  window.currentUser = username;
+  document.getElementById('loginScreen').style.display = 'none';
+  document.getElementById('chatScreen').style.display = 'flex';
+};
+
+// Group management
+let currentGroupId = null;
+const createGroupBtn = document.getElementById('createGroupBtn');
+createGroupBtn.onclick = async () => {
+  const name = document.getElementById('newGroupName').value.trim();
+  if(!name) return;
+  const docRef = await db.collection("groups").add({ name: name, members: [window.currentUser] });
+  currentGroupId = docRef.id;
+  document.getElementById('currentGroupName').innerText = "Groupe: " + name;
+  listenMessages(currentGroupId);
+};
+
+const joinGroupBtn = document.getElementById('joinGroupBtn');
+joinGroupBtn.onclick = async () => {
+  const code = document.getElementById('joinGroupCode').value.trim();
+  if(!code) return;
+  const snapshot = await db.collection("groups").doc(code).get();
+  if(!snapshot.exists){ alert("Groupe introuvable"); return; }
+  currentGroupId = code;
+  const groupData = snapshot.data();
+  if(!groupData.members.includes(window.currentUser)){
+    groupData.members.push(window.currentUser);
+    await db.collection("groups").doc(code).update({ members: groupData.members });
+  }
+  document.getElementById('currentGroupName').innerText = "Groupe: " + groupData.name;
+  listenMessages(currentGroupId);
+};
+
+// Chat
+const sendBtn = document.getElementById('sendBtn');
+sendBtn.onclick = () => {
+  const msgInput = document.getElementById('messageInput');
+  if(!msgInput.value || !currentGroupId) return;
+  db.collection("groups").doc(currentGroupId).collection("messages").add({
+    sender: window.currentUser,
+    text: msgInput.value,
+    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+  });
+  msgInput.value = '';
+};
+
+function listenMessages(groupId){
+  const messagesDiv = document.getElementById('messages');
+  messagesDiv.innerHTML = '';
+  db.collection("groups").doc(groupId).collection("messages")
+    .orderBy("timestamp")
+    .onSnapshot(snapshot=>{
+      messagesDiv.innerHTML = '';
+      snapshot.forEach(doc=>{
+        const m = doc.data();
+        const div = document.createElement('div');
+        div.textContent = m.sender + ": " + m.text;
+        messagesDiv.appendChild(div);
+        messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      });
+    });
+}
+</script>
+
 </body>
 </html>
